--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <div style="color: red">
+      <%= alert %>
+    </div>
+
+    <div style="color: green">
+      <%= notice %>
+    </div>
     <%= yield %>
   </body>
 </html>
