--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     </div>
 
     <!-- add the Bootstrap container here -->
-    <div class="container px-4">
+    <div class="container ms-2 mt-2">
 
     <%= yield %>
   </body>
