--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,14 @@
   </head>
 
   <body>
+
+    <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Fork & Vine 🍇🍷🍽️</a>
+    </div>
+    </nav>
+
+
     <div style="color: red">
       <%= alert %>
     </div>
