--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,12 +30,30 @@
 
   <body>
 
-    <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Fork & Vine 🍇🍷🍽️</a>
+  <nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Fork & Vine 🍇🍷🍽️</a>
+    <div class="d-flex ms-auto">
+      <% if user_signed_in? %>
+        <a class="nav-link me-3"
+           href="<%= edit_user_registration_path %>">
+          User Settings
+        </a>
+        <a class="nav-link"
+           rel="nofollow"
+           data-method="delete"
+           href="<%= destroy_user_session_path %>">
+          Sign Out
+        </a>
+      <% else %>
+        <a class="nav-link"
+           href="<%= new_user_session_path %>">
+          Log In
+        </a>
+      <% end %>
     </div>
-    </nav>
-
+  </div>
+</nav>
 
     <div style="color: red">
       <%= alert %>
