--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
   <body>
 
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Fork & Vine 🍇🍷🍽️</a>
     <div class="d-flex ms-auto">
