--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,11 @@
   </div>
 </nav>
 
-    <div style="color: red">
+    <div class="text-center" style="color: red">
       <%= alert %>
     </div>
 
-    <div style="color: green">
+    <div class="text-center" style="color: green">
       <%= notice %>
     </div>
 
