--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,27 +7,36 @@
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <p class="text-muted">
+        Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+      </p>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+                 required: true,
+                 placeholder: 'Leave blank if unchanged',
+                input_html: { autocomplete: 'current-password' } %>
+    
+    <%= f.input :password,
+                placeholder: 'New password',
+                required: false,
+                input_html: { autocomplete: 'new-password' } %>
+
+    <%= f.input :password_confirmation,
+                placeholder: 'Retype new password',
+                required: false,
+                input_html: { autocomplete: 'new-password' } %>
+
+
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update", class: "btn btn-primary" %>
+  <div class="form-actions mt-3">
+    <%= f.button :submit, 'Update', class: 'btn btn-primary me-2' %>
 
-  <div><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+    <%= button_to 'Cancel my account',
+                  registration_path(resource_name),
+                  method: :delete,
+                  class: 'btn btn-outline-danger',
+                  data: { confirm: 'Are you sure?', turbo_confirm: 'Are you sure?' } %>
   </div>
 <% end %>
-
-<%= link_to "Back", :back %>
