--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,9 @@ label.required span {
   margin-bottom: 0.5rem;
   display: block;
 }
+
+.devise-links {
+  text-align: center;
+  margin-top: 1rem;
+}
+
