--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,8 @@
            href="<%= edit_user_registration_path %>">
           User Settings
         </a>
-        <a class="nav-link"
-           rel="nofollow"
-           data-method="delete"
-           href="<%= destroy_user_session_path %>">
-          Sign Out
+        <a class="nav-link" href="<%= destroy_user_session_path %>">
+        Sign Out
         </a>
       <% else %>
         <a class="nav-link"
